--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     display: flex;
     justify-content: center;
-    font-family: 'SF Pro Display', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 #wrapper {
   width: 100vw;
@@ -13,11 +13,13 @@ body{
   padding: 0px;
   margin-right: 0;
   margin-left: 7%;
+  
 }
 .Image {
   width: 100%;
   height: 700px;
   border-radius: 15px;
+  object-fit: cover;
 }
 #right{
     height: 100%;
@@ -49,11 +51,20 @@ body{
     height: 100%;
     width: 400px;
     padding: 10px;
+    font-size: 19px;
 }
 #others{
     display: flex;
     gap: 20px;
     justify-content: center;
+    margin-right: 40px;
+}
+.fpass{
+      color:rgb(28, 72, 232);
+      cursor: pointer;
+      display: flex;
+      justify-content: flex-end;
+      width: 346px;
 }
 .divider {
   display: flex;
@@ -96,12 +107,6 @@ body{
   color: #888;
   margin-bottom: -40px;
 }
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('./fonts/SF-Pro-Display-Regular.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-}
 @media (max-width: 768px) {
   
   #wrapper {
@@ -120,6 +125,14 @@ body{
   width: 330px;
   height: 200px;
   border-radius: 15px;
+  object-fit: cover;
+}
+.fpass{
+      color:rgb(28, 72, 232);
+      cursor: pointer;
+      display: flex;
+      justify-content: flex-end;
+      width: 310px;
 }
 .design{
     height: 42px;
@@ -156,6 +169,7 @@ form{
 }
 #left{
   width: 342px;
+  font-size: 19px;
 }
 #right{
     height: 100%;
